src/domain.roles/mechanic/skills/git.repo.test/__snapshots__/git.repo.test.play.integration.test.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.repo.test given: [case1] repo with tests that pass when: [t0] --what unit is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 3 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case2] repo with tests that fail when: [t0] --what unit is called then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case3] repo with multiple test files when: [t0] --what unit --scope is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope user
   ├─ scope: user
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 2 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t0] --what unit --resnap is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --resnap
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 1 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t1] --what unit --resnap fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit --resnap
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t2] --what integration --resnap is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --resnap
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 2 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t3] --what integration --resnap fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration --resnap
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t4] --what acceptance --resnap is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what acceptance --resnap
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 3 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case4] repo with snapshot to update when: [t5] --what acceptance --resnap fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what acceptance --resnap
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case5] repo with integration tests when: [t0] --what integration is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 5 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case5] repo with integration tests when: [t1] --what integration fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case5] repo with integration tests when: [t2] --what integration keyrack unlock fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration
   ├─ status: malfunction
   └─ error: keyrack unlock failed

hint: check keyrack setup with 'rhx keyrack status --owner ehmpath'

keyrack unlock failed: vault locked
"
`;

exports[`git.repo.test given: [case6] repo with no matched tests when: [t0] --what unit --scope with no matches is called then: output matches snapshot 1`] = `
"   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test given: [case7] repo without test command when: [t0] --what unit is called then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit
   ├─ status: constraint
   └─ error: no 'test:unit' command in package.json

hint: ehmpathy convention uses 'test:lint', 'test:unit', 'test:integration', 'test:acceptance'
"
`;

exports[`git.repo.test given: [case8] repo with tests that need extra args when: [t0] --what unit -- --verbose is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 1 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case9] repo with lint command when: [t0] --what lint --scope --resnap is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what lint --scope src --resnap
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case9] repo with lint command when: [t1] --what lint fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (0s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/TIMESTAMP.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;

exports[`git.repo.test given: [case10] repo with acceptance tests when: [t0] --what acceptance is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what acceptance
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 2 files
   │  ├─ tests: 8 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case10] repo with acceptance tests when: [t1] --what acceptance fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what acceptance
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case10] repo with acceptance tests when: [t2] --what acceptance keyrack unlock fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what acceptance
   ├─ status: malfunction
   └─ error: keyrack unlock failed

hint: check keyrack setup with 'rhx keyrack status --owner ehmpath'

keyrack unlock failed: vault locked
"
`;

exports[`git.repo.test given: [case10] repo with acceptance tests when: [t3] --what acceptance --scope is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what acceptance --scope checkout
   ├─ keyrack: unlocked ehmpath/test
   ├─ scope: checkout
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 1 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case11] repo with all test commands when: [t0] --what all is called and all pass then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what lint
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 3 files
   │  ├─ tests: 10 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

🐚 git.repo.test --what integration
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 2 files
   │  ├─ tests: 5 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

🐚 git.repo.test --what acceptance
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 2 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired

"
`;

exports[`git.repo.test given: [case11] repo with all test commands when: [t1] --what all is called and lint fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (0s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/TIMESTAMP.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;

exports[`git.repo.test given: [case11] repo with all test commands when: [t2] --what all unit fails (after lint passes) then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case11] repo with all test commands when: [t3] --what all integration fails (after lint+unit pass) then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case11] repo with all test commands when: [t4] --what all acceptance fails (after lint+unit+integration pass) then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what acceptance
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t0] --what unit --thorough is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --thorough
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 5 files
   │  ├─ tests: 20 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t1] --what unit --thorough fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what unit --thorough
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 5 files
   │  ├─ tests: 19 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t2] --what integration --thorough is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --thorough
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 3 files
   │  ├─ tests: 15 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t3] --what integration --thorough fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration --thorough
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 3 files
   │  ├─ tests: 14 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=integration/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t4] --what acceptance --thorough is called then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what acceptance --thorough
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (1s)
   ├─ stats
   │  ├─ suites: 2 files
   │  ├─ tests: 10 passed, 0 failed, 0 skipped
   │  └─ time: 1s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case12] repo with tests to run thorough when: [t5] --what acceptance --thorough fails then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what acceptance --thorough
   ├─ keyrack: unlocked ehmpath/test
   │  └─ ✋ failed (0s)
   ├─ stats
   │  ├─ suites: 2 files
   │  ├─ tests: 9 passed, 1 failed, 0 skipped
   │  └─ time: 0s
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=acceptance/TIMESTAMP.stderr.log
   └─ tip: Read the log for full test output and failure details
"
`;

exports[`git.repo.test given: [case13] repo with unit tests when: [t0] --what unit --log always creates namespaced log then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 1 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
      └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
"
`;

exports[`git.repo.test given: [case14] repo with no changed test files when: [t0] --what unit with no tests found (no scope) then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   ├─ status: skipped
   ├─ files: 0 (no test files changed since origin/main)
   └─ tests: 0 (no tests to run)

🥥 did you know?
   ├─ jest --changedSince may miss some file changes
   └─ use --scope and --thorough to target tests directly
"
`;

exports[`git.repo.test given: [case15] user requests help when: [t0] --help is called then: output matches snapshot 1`] = `
"usage: git.repo.test.sh --what <type> [--scope <pattern>] [--resnap] [--thorough] [--timeout <secs>]

run repo tests with turtle vibes summary and log capture

options:
  --what <type>       test type: types | format | lint | unit | integration | acceptance | all
  --scope <pattern>   filter tests by pattern (regex supported)
                        'foo'         match file path (default)
                        'path(foo)'   match file path (explicit)
                        'name(foo)'   match test/describe name
  --resnap            update snapshots (sets RESNAP=true)
  --thorough          run full suite (sets THOROUGH=true)
  --timeout <secs>    max time in seconds before timeout
  --log <mode>        auto | always (default: auto)
                        auto = persist logs on failure only
                        always = persist logs on success and failure
  --help, -h          show this help
"
`;

exports[`git.repo.test given: [case16] user provides invalid test type when: [t0] --what invalid is called then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what invalid
   └─ error: invalid --what value 'invalid'

valid values: types | format | lint | unit | integration | acceptance | all
example: --what types,lint,unit
"
`;

exports[`git.repo.test given: [case17] user omits required --what when: [t0] no arguments provided then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test
   └─ error: --what is required

usage: git.repo.test.sh --what <lint|unit|integration|acceptance|all>
"
`;

exports[`git.repo.test given: [case18] real repo with real npm when: [t0] --what unit --scope with real npm call then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope nonexistent
   ├─ scope: nonexistent
   │  └─ matched: 0 files
   ├─ status: constraint
   └─ error: no tests matched scope 'nonexistent'

hint: check the scope pattern or run without --scope to see all tests
"
`;

exports[`git.repo.test given: [case19] real integration test with keyrack when: [t0] --what integration calls real keyrack then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what integration
   ├─ status: malfunction
   └─ error: keyrack unlock failed

hint: check keyrack setup with 'rhx keyrack status --owner ehmpath'


/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/.pnpm/rhachet@1.40.6_@huggingface+transformers@3.8.1_@tensorflow+tfjs@4.22.0_seedrandom@3.0.5__@types+node@22.15.21_zod@4.3.4/node_modules/rhachet/dist/domain.operations/keyrack/session/unlockKeyrackKeys.js:67
            throw new helpful_errors_1.UnexpectedCodePathError('no keyrack.yml found in repo', {
                  ^

UnexpectedCodePathError: UnexpectedCodePathError: no keyrack.yml found in repo

{
  "note": "keyrack.yml declares which keys are required"
}
    at unlockKeyrackKeys (/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/[4m.pnpm[24m/rhachet@1.40.6_@huggingface+transformers@3.8.1_@tensorflow+tfjs@4.22.0_seedrandom@3.0.5__@types+node@22.15.21_zod@4.3.4/node_modules/[4mrhachet[24m/src/domain.operations/keyrack/session/unlockKeyrackKeys.ts:96:13)
    at async Command.<anonymous> (/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/[4m.pnpm[24m/rhachet@1.40.6_@huggingface+transformers@3.8.1_@tensorflow+tfjs@4.22.0_seedrandom@3.0.5__@types+node@22.15.21_zod@4.3.4/node_modules/[4mrhachet[24m/src/contract/cli/invokeKeyrack.ts:1037:39)
    at async Command.parseAsync (/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/[4m.pnpm[24m/commander@14.0.0/node_modules/[4mcommander[24m/lib/command.js:1123:5)
    at async _invoke (/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/[4m.pnpm[24m/rhachet@1.40.6_@huggingface+transformers@3.8.1_@tensorflow+tfjs@4.22.0_seedrandom@3.0.5__@types+node@22.15.21_zod@4.3.4/node_modules/[4mrhachet[24m/src/contract/cli/invoke.ts:76:3)
    at async withEmojiSpaceShim (/home/vlad/git/ehmpathy/_worktrees/rhachet-roles-ehmpathy.vlad.fix-test-flags/node_modules/[4m.pnpm[24m/emoji-space-shim@0.1.3/node_modules/[4memoji-space-shim[24m/src/contract/sdk/withEmojiSpaceShim.ts:15:12)

Node.js v22.21.0
"
`;

exports[`git.repo.test given: [case20] flag combinations when: [t0] --what unit --scope --resnap combined then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope user --resnap
   ├─ scope: user
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 2 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case20] flag combinations when: [t1] --what unit --scope --thorough combined then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope user --thorough
   ├─ scope: user
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 5 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case20] flag combinations when: [t2] --what unit --scope --resnap --thorough all combined then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope user --resnap --thorough
   ├─ scope: user
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 10 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case20] flag combinations when: [t3] --what integration --scope --thorough combined then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --scope api --thorough
   ├─ keyrack: unlocked ehmpath/test
   ├─ scope: api
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 8 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case20] flag combinations when: [t4] --what unit --log always --scope combined then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope user
   ├─ scope: user
   │  └─ matched: 1 files
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 1 files
   │  ├─ tests: 3 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stdout.log
      └─ stderr: .log/role=mechanic/skill=git.repo.test/what=unit/TIMESTAMP.stderr.log
"
`;

exports[`git.repo.test given: [case21] edge cases when: [t0] --scope with empty string (ignored) then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   ├─ stats
   │  ├─ suites: 0 files
   │  ├─ tests: 0 passed, 0 failed, 0 skipped
   │  └─ time: 0s
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test given: [case21] edge cases when: [t1] --scope with special characters then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --scope path(src/*)
   ├─ scope: path(src/*)
   │  └─ matched: 0 files
   ├─ status: constraint
   └─ error: no tests matched scope 'path(src/*)'

hint: check the scope pattern or run without --scope to see all tests
"
`;
